feat: Implement SuperKey authentication system
- Added SuperKey authentication functionality in the JNI layer (jni.c) to allow manager authentication using a secret key.
- Implemented the authenticate_superkey function in ksu.c to handle SuperKey validation via ioctl.
- Defined a new struct for SuperKey authentication in ksu.h and added the corresponding ioctl command.
- Exposed the authenticateSuperKey method in the Natives Kotlin object for Java interop.
- Updated UI components in Flash.kt and Home.kt to include SuperKey input and authentication dialogs.
- Enhanced the Install.kt screen to accept SuperKey input for APatch-style installations.
- Integrated SuperKey handling in KsuCli.kt for command-line operations.
- Added localized strings for SuperKey authentication in strings.xml.
- Updated build configurations to support Java 17.
- Introduced a new Python script for generating SuperKey hashes for kernel compilation.
- Developed kernel-side implementation for SuperKey authentication in superkey.c and superkey.h.
- Documented the SuperKey authentication system in a new markdown guide.

--- a/kernel/Kbuild
+++ b/kernel/Kbuild
@@ -15,10 +15,20 @@ kernelsu-objs += seccomp_cache.o
 kernelsu-objs += file_wrapper.o
 kernelsu-objs += util.o
 kernelsu-objs += sulog.o
+# SuperKey authentication (APatch-style, always compiled for runtime patching)
+kernelsu-objs += superkey.o
 
 ifeq ($(CONFIG_KSU_MANUAL_SU), y)
 ccflags-y += -DCONFIG_KSU_MANUAL_SU
 kernelsu-objs += manual_su.o
+endif
+
+# Legacy: compile-time SuperKey hash (deprecated, use runtime patching instead)
+ifeq ($(CONFIG_KSU_SUPERKEY), y)
+ccflags-y += -DCONFIG_KSU_SUPERKEY
+ifdef KSU_SUPERKEY_HASH
+ccflags-y += -DSUPERKEY_HASH=$(KSU_SUPERKEY_HASH)
+endif
 endif
 
 kernelsu-objs += selinux/selinux.o
