userspace: rewrite ksuinit in C++
- Add ksuinit-cpp: C++ rewrite of Rust ksuinit (322 lines → ~400 lines)
- Static linking for minimal dependencies
- Add ksuinit-cpp.yml workflow for CI
- Update build-manager.yml to use C++ version
- Update ksud.yml to handle both C++ and Rust artifacts

Binary size comparison:
- C++ version (stripped): ~1.8M (aarch64 static)
- Rust version: ~2.4M (similar)

--- a/.github/workflows/ksud.yml
+++ b/.github/workflows/ksud.yml
@@ -42,7 +42,13 @@ jobs:
     - name: Prepare ksuinit
       if: ${{ inputs.pack_ksuinit }}
       run: |
-        mv ksuinit/*/release/ksuinit ./userspace/ksud/bin/aarch64/
+        # C++ 版本: ksuinit 直接在 artifact 根目录
+        # Rust 版本: ksuinit/*/release/ksuinit
+        if [ -f ksuinit/ksuinit ]; then
+          mv ksuinit/ksuinit ./userspace/ksud/bin/aarch64/
+        else
+          mv ksuinit/*/release/ksuinit ./userspace/ksud/bin/aarch64/
+        fi
         
     - name: Setup rustup
       run: |
