--- a/.github/workflows/build-manager.yml
+++ b/.github/workflows/build-manager.yml
@@ -7,7 +7,8 @@ on:
     paths:
       - '.github/workflows/build-manager.yml'
       - '.github/workflows/build-lkm.yml'
-      - '.github/workflows/ksud.yml'
+      - '.github/workflows/ksud-cpp.yml'
+      - '.github/workflows/ksuinit-cpp.yml'
       - 'manager/**'
       - 'kernel/**'
       - 'userspace/**'
@@ -16,7 +17,8 @@ on:
     paths:
       - '.github/workflows/build-manager.yml'
       - '.github/workflows/build-lkm.yml'
-      - '.github/workflows/ksud.yml'
+      - '.github/workflows/ksud-cpp.yml'
+      - '.github/workflows/ksuinit-cpp.yml'
       - 'manager/**'
       - 'kernel/**'
       - 'userspace/**'
@@ -41,7 +43,7 @@ jobs:
             os: ubuntu-latest
           - target: armv7-linux-androideabi
             os: ubuntu-latest
-    uses: ./.github/workflows/ksud.yml
+    uses: ./.github/workflows/ksud-cpp.yml
     with:
       target: ${{ matrix.target }}
       os: ${{ matrix.os }}
@@ -137,9 +139,10 @@ jobs:
           mkdir -p app/src/main/jniLibs/arm64-v8a
           mkdir -p app/src/main/jniLibs/x86_64
           mkdir -p app/src/main/jniLibs/armeabi-v7a
-          cp -f ../aarch64-linux-android/release/ksud ../manager/app/src/main/jniLibs/arm64-v8a/libksud.so
-          cp -f ../x86_64-linux-android/release/ksud ../manager/app/src/main/jniLibs/x86_64/libksud.so
-          cp -f ../armv7-linux-androideabi/release/ksud ../manager/app/src/main/jniLibs/armeabi-v7a/libksud.so
+          # C++ 版本: ksud 直接在 artifact 根目录
+          cp -f ../ksud-aarch64-linux-android/ksud ../manager/app/src/main/jniLibs/arm64-v8a/libksud.so
+          cp -f ../ksud-x86_64-linux-android/ksud ../manager/app/src/main/jniLibs/x86_64/libksud.so
+          cp -f ../ksud-armv7-linux-androideabi/ksud ../manager/app/src/main/jniLibs/armeabi-v7a/libksud.so
 
       - name: Build with Gradle
         if: ${{ steps.determine.outputs.SKIP != 'true' }}
