--- a/kernel/Kbuild
+++ b/kernel/Kbuild
@@ -5,10 +5,11 @@ kernelsu-objs += apk_sign.o
 kernelsu-objs += sucompat.o
 kernelsu-objs += superkey.o
 
-ifeq ($(CONFIG_KSU_SUSFS)$(CONFIG_KSU_MANUAL_HOOK), nn)
+ifeq ($(CONFIG_KSU_SUSFS)$(CONFIG_KSU_MANUAL_HOOK)$(CONFIG_KSU_HYMOFS), nnn)
 kernelsu-objs += syscall_hook_manager.o
 kernelsu-objs += util.o
 endif
+
 
 kernelsu-objs += throne_tracker.o
 kernelsu-objs += pkg_observer.o
@@ -127,6 +128,8 @@ $(info -- SukiSU: KSU_MANUAL_HOOK)
 else ifeq ($(CONFIG_KSU_SUSFS), y)
 ccflags-y += -DCONFIG_KSU_SUSFS
 $(info -- SukiSU: SUSFS_INLINE_HOOK)
+else ifeq ($(CONFIG_KSU_HYMOFS), y)
+$(info -- YukiSU: HYMOFS_INLINE_HOOK)
 else
 ccflags-y += -DKSU_KPROBES_HOOK
 ccflags-y += -DKSU_TP_HOOK
