Rename SukiSU to YukiSU and update related functionality
- Changed all instances of "SukiSU" to "YukiSU" in header files, source files, and comments to reflect the new naming convention.
- Updated function names and external declarations in super_access.h, ksu.c, ksu.h, ksud.c, and other related files to match the new naming.
- Adjusted conditional compilation directives to remove references to CONFIG_KSU_SUSFS and ensure compatibility with CONFIG_KSU_HYMOFS.
- Enhanced the syscall hook manager and setuid hook to support the new naming and functionality.
- Added comments and logging for better clarity and debugging.
- Ensured that the SuperKey authentication implementation is consistent with the new naming.

--- a/kernel/Kconfig
+++ b/kernel/Kconfig
@@ -38,19 +38,19 @@ config KSU_MULTI_MANAGER_SUPPORT
 		Enable multi KernelSU manager support
 
 config KPM
-	  bool "Enable SukiSU KPM"
+	  bool "Enable YukiSU KPM"
 	  depends on KSU && 64BIT
 	  select KALLSYMS
 	  select KALLSYMS_ALL
 	  default n
 	  help
-		Enabling this option will activate the KPM feature of SukiSU.
+		Enabling this option will activate the KPM feature of YukiSU.
 		This option is suitable for scenarios where you need to force KPM to be enabled.
 		but it may affect system stability.
 
 config KSU_MANUAL_HOOK
 	bool "Hook KernelSU manually"
-	depends on KSU != m && !KSU_SUSFS
+	depends on KSU != m && !KSU_HYMOFS
 	help
 	  If enabled, Hook required KernelSU syscalls with manually-patched function.
 	  This can be used together with KSU_HYMOFS for complete functionality.
@@ -63,6 +63,5 @@ config KSU_MANUAL_HOOK_AUTO_SETUID_HOOK
 	  If turn off this option, you need checkout to kernel/sys.c 
 	  in SYSCALL_DEFINE3(setresuid, uid_t, ruid, uid_t, euid, uid_t, suid)
 	  add a ksu_handle_setresuid calls in there
-
 
 endmenu
