--- a/kernel/Kbuild
+++ b/kernel/Kbuild
@@ -68,24 +68,15 @@ endef
 ifeq ($(KSU_GITHUB_VERSION_COMMIT),)
   ifeq ($(LOCAL_GIT_EXISTS),1)
     $(shell cd $(KSU_SRC); [ -f ../.git/shallow ] && $(GIT_BIN) fetch --unshallow)
-    KSU_LOCAL_VERSION := $(shell cd $(KSU_SRC); $(GIT_BIN) rev-list --count HEAD 2>/dev/null || echo 0)
-    ifeq ($(KSU_LOCAL_VERSION),)
-      KSU_LOCAL_VERSION := 0
-    endif
-    KSU_VERSION := $(shell expr 10000 + $(KSU_LOCAL_VERSION) 2>/dev/null || echo 10000)
-    ifeq ($(KSU_VERSION),)
-      KSU_VERSION := 10000
-    endif
+    KSU_LOCAL_VERSION := $(shell cd $(KSU_SRC); $(GIT_BIN) rev-list --count $(REPO_BRANCH))
+    KSU_VERSION := $(shell expr 10000 + $(KSU_LOCAL_VERSION) - 3135)
     $(info -- $(REPO_NAME) version (local .git): $(KSU_VERSION))
   else
-    KSU_VERSION := 10000
+    KSU_VERSION := 12000
     $(warning -- Could not fetch version online or via local .git! Using fallback version: $(KSU_VERSION))
   endif
 else
-  KSU_VERSION := $(shell expr 10000 + $(KSU_GITHUB_VERSION_COMMIT) 2>/dev/null || echo 10000)
-  ifeq ($(KSU_VERSION),)
-    KSU_VERSION := 10000
-  endif
+  KSU_VERSION := $(shell expr 10000 + $(KSU_GITHUB_VERSION_COMMIT) - 3135)
   $(info -- $(REPO_NAME) version (GitHub): $(KSU_VERSION))
 endif
 
