--- a/kernel/Kconfig
+++ b/kernel/Kconfig
@@ -23,14 +23,14 @@ config KSU_MANUAL_SU
       Use manual su and authorize the corresponding command line and application via prctl
 
 config KPM
-    bool "Enable SukiSU KPM"
+	  bool "Enable YukiSU KPM"
     depends on KSU && 64BIT
+	  select KALLSYMS
+	  select KALLSYMS_ALL
     default n
     help
-      Enabling this option will activate the KPM feature of SukiSU.
+		Enabling this option will activate the KPM feature of YukiSU.
       This option is suitable for scenarios where you need to force KPM to be enabled.
       but it may affect system stability.
-    select KALLSYMS
-    select KALLSYMS_ALL
 
 endmenu
