refactor: Uses ksud flash for kernel flashing
Uses the userspace ksud "flash" operation to perform kernel package (AK3) flashing from the Android worker.

Simplifies the Android worker by removing local download, KPM patching, extraction/repack and many legacy tool dependencies; instead it copies the package to a temp location, invokes ksud flash, streams its output into the UI and updates progress/logs. Adds ksud flash implementation and registers the command in the CLI/build, including support for slot and logging options.

Reduces complexity and fragile local tooling, centralizes flashing logic in userspace, and improves reliability and observability.

--- a/userspace/ksud/CMakeLists.txt
+++ b/userspace/ksud/CMakeLists.txt
@@ -79,6 +79,8 @@ set(SOURCES
     src/umount.cpp
     src/debug.cpp
     src/kpm.cpp
+    # Flash kernel packages
+    src/flash/flash_ak3.cpp
     # HymoFS module management
     src/hymo/hymo_cli.cpp
     src/hymo/hymo_utils.cpp
