feat: integrate soft bootloader hiding (weak BL hide)
Add bootloader status hiding feature (based on Shamiko):
- Reset boot-related props to appear as locked bootloader
- Supports generic Android, MIUI, Realme, Samsung, OnePlus
- Runs automatically during service stage if enabled
- CLI: ksud feature hide-bl [enable|disable|run]
- Config stored in /data/adb/ksu/.hide_bootloader
- Manager UI toggle in Advanced Settings (next to SELinux)

--- a/userspace/ksud/CMakeLists.txt
+++ b/userspace/ksud/CMakeLists.txt
@@ -79,6 +79,8 @@ set(SOURCES
     src/umount.cpp
     src/debug.cpp
     src/kpm.cpp
+    # Core features
+    src/core/hide_bootloader.cpp
     # Flash kernel packages
     src/flash/flash_ak3.cpp
     # HymoFS module management
