--- a/.github/workflows/ddk-lkm.yml
+++ b/.github/workflows/ddk-lkm.yml
@@ -48,7 +48,10 @@ jobs:
         
     - name: Install GPG
       run: |
-        apt-get update && apt-get install -y gnupg
+        rm -rf /var/lib/apt/lists/*
+        apt-get clean
+        apt-get update
+        apt-get install -y gnupg || (apt-get update --fix-missing && apt-get install -y gnupg)
 
     - name: Import GPG key
       uses: crazy-max/ghaction-import-gpg@v6
