fix(ksud): properly set Android API 29 and fix namespace issues
- Add ANDROID_PLATFORM=android-29 and CMAKE_ANDROID_API=29 to CMake
- Add 'using namespace hymo' for HymoFS/HymoFSStatus
- Fix hymoGetActiveRules() - get_active_rules() returns string directly

--- a/.github/workflows/ksud.yml
+++ b/.github/workflows/ksud.yml
@@ -114,6 +114,8 @@ jobs:
           -DCMAKE_SYSTEM_NAME=Android \
           -DCMAKE_ANDROID_ARCH_ABI=${{ steps.target.outputs.abi }} \
           -DCMAKE_ANDROID_NDK=$ANDROID_NDK_HOME \
+          -DANDROID_PLATFORM=android-29 \
+          -DCMAKE_ANDROID_API=29 \
           -DCMAKE_C_COMPILER=$CC \
           -DCMAKE_CXX_COMPILER=$CXX \
           -DCMAKE_BUILD_TYPE=Release
