feat(binder): add Shizuku compatible service in C++
- Implement IShizukuService interface natively
- Support newProcess for remote command execution
- IRemoteProcess with stdin/stdout/stderr pipes
- Auto-grant permission for KSU allowlisted apps
- Register as 'user_service' for Shizuku compatibility

--- a/userspace/ksud/CMakeLists.txt
+++ b/userspace/ksud/CMakeLists.txt
@@ -112,6 +112,8 @@ set(SOURCES
     src/binder/murasaki_binder.cpp
     src/binder/murasaki_service.cpp
     src/binder/murasaki_ipc.cpp
+    # Shizuku compatible service
+    src/binder/shizuku_service.cpp
     ${ASSETS_CPP}
 )
 
