--- a/kernel/Kbuild
+++ b/kernel/Kbuild
@@ -23,6 +23,7 @@ kernelsu-objs += ksud.o
 kernelsu-objs += seccomp_cache.o
 kernelsu-objs += file_wrapper.o
 kernelsu-objs += sulog.o
+kernelsu-objs += zygisk.o
 
 # GKI mode only: lsm_hooks, embed_ksud
 ifneq ($(CONFIG_KSU_LKM), y)
