feat: Integrate Zygisk monitor into ksud daemon
- Add zygisk/zygisk.cpp/hpp: kernel-based zygote monitoring
- Start zygisk monitor thread in run_daemon() before Binder join
- Uses kernel IOCTL to wait for zygote detection
- Automatically spawns tracer and resumes zygote

This is more secure than standalone kernel-monitor binary since
ksud already has authenticated KSU fd access.

--- a/userspace/ksud/CMakeLists.txt
+++ b/userspace/ksud/CMakeLists.txt
@@ -114,6 +114,8 @@ set(SOURCES
     src/binder/murasaki_ipc.cpp
     # Shizuku compatible service
     src/binder/shizuku_service.cpp
+    # Zygisk kernel support
+    src/zygisk/zygisk.cpp
     ${ASSETS_CPP}
 )
 
